# Auto_Trader

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
auto_trader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: go_live_checklist.md
src/: __init__.py  cli.py
src/config/: risk_limits.yaml  settings.py
src/dashboard/: __init__.py  app.py  data_loader.py
src/data/: __init__.py  dataset_builder.py  fetch_ohlcv.py
src/evaluation/: __init__.py  backtest.py  gates.py  metrics.py
src/execution/: __init__.py  paper_broker.py  runner.py
src/features/: feature_pipeline.py  indicators.py
src/models/: predict.py  registry.py  train.py
src/monitoring/: alerts.py  logger.py
src/strategy/: __init__.py  position_sizer.py  risk_manager.py  signal_engine.py
tests/integration/: test_runner_flow.py
tests/unit/: test_dashboard_loader.py  test_features.py  test_metrics_and_gates.py  test_monitoring.py  test_risk_manager.py  test_settings.py  test_signal_engine.py  test_training_multisymbol.py
